(executable
  (name chapter02)
  (modules chapter02)
  (libraries utils))

(executable
  (name chapter03)
  (modules chapter03)
  (libraries utils))

(library
  (name utils)
  (modules utils))

;; IMP language

(ocamllex
  (modules lexer))

(menhir
  (modules parser))

(library
  (name imp)
  (modules ast lexer parser parse))

(tests
  (names test_parse)
  (modules test_parse)
  (libraries imp ounit2))
