(executable
  (name chapter02)
  (modules chapter02)
  (libraries utils))

(executable
  (name chapter03)
  (modules chapter03)
  (libraries state utils))

(executable
  (name chapter07)
  (modules chapter07)
  (libraries imp utils))

(library
  (name state)
  (modules state))

(library
  (name utils)
  (modules utils))

;; IMP language

(ocamllex
  (modules lexer))

(menhir
  (modules parser))

(library
  (name imp)
  (modules ast eval lexer parser parse examples)
  (libraries state))

(tests
  (names test_parse)
  (modules test_parse)
  (libraries imp ounit2))
