(executable
  (name chapter02)
  (modules chapter02)
  (libraries utils))

(executable
  (name chapter03)
  (modules chapter03)
  (libraries state utils))

(executable
  (name chapter07)
  (modules chapter07)
  (libraries imp utils))

(executable
  (name chapter08)
  (modules chapter08)
  (libraries imp utils))

(executable
  (name chapter09)
  (modules chapter09)
  (libraries imp utils))

(executable
  (name chapter10)
  (modules chapter10)
  (libraries imp utils))

(executable
  (name chapter13)
  (modules chapter13)
  (libraries imp utils))

(library
  (name state)
  (modules state))

(library
  (name utils)
  (modules utils))

;; IMP language

(ocamllex
  (modules lexer))

(menhir
  (modules parser))

(library
  (name imp)
  (modules ast eval type lexer parser parse examples)
  (libraries state utils))

(tests
  (names test_parse)
  (modules test_parse)
  (libraries imp ounit2))
